# seichi-timed-stats-conifers

./: .dockerignore  .env.sample  .gitignore  .scalafix.conf  .scalafmt.conf  Dockerfile  README.md  build.sbt  developmentEnvironmentStart.bat  docker-compose-db.yml  docker-compose.yml
.github/workflows/: build-and-release-application.yaml  build-test.yaml  check-for-scalafmt-and-scalafix.yaml
database/: schema.sql
docs/design_docs/: 2022-09-02-seichi-timed-stats-conifers.md
project/: plugins.sbt
server/: .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile-database-migration  Dockerfile-ingestor  README.md  dev-db.docker-compose.yaml  diesel.toml
server/app/: Cargo.toml
server/app/src/: main.rs
server/config/: Cargo.toml
server/config/src/: lib.rs
server/database/migrations/2023-05-24-025310_create_initial_tables/: down.sql  up.sql
server/domain/: Cargo.toml
server/domain/src/: lib.rs  models.rs  repositories.rs  types.rs
server/domain/src/models/: player.rs  statistics.rs  stats_snapshot.rs
server/domain/src/repositories/: player_stats_repository.rs  player_timed_stats_repository.rs
server/domain/src/types/: timestamped.rs
server/infra/db_repository_impl/: Cargo.toml
server/infra/db_repository_impl/src/: cycle_free_path.rs  debugging_utils.rs  lib.rs  stats_with_incremental_snapshot_tables.rs  structures_embedded_in_rdb.rs
server/infra/db_repository_impl/src/diesel_based_impl/: has_tables_impl.rs  sql_conversions.rs
server/infra/repository_impl/: Cargo.toml
server/infra/repository_impl/src/: diesel_based_impl.rs  lib.rs  mysql_data_source.rs  schema.rs  stats.rs  stats_with_incremental_snapshot_tables.rs  structures.rs  structures_embedded_in_rdb.rs  util.rs
server/infra/repository_impl/src/diesel_based_impl/: has_tables_impl.rs  sql_conversions.rs
server/infra/upstream_repository_impl/: Cargo.toml  buf.gen.yaml
server/infra/upstream_repository_impl/src/: lib.rs
server/ingestor/: Cargo.toml
server/ingestor/src/: config.rs  main.rs
src/main/scala/click/seichi/: SeichiTimedStatsConifers.scala  SeichiTimedStatsConifers.scala.semanticdb
src/main/scala/click/seichi/accumulation/domain/: PlayerStaticsAccumulatePersistence.scala  TimeStamp.scala
src/main/scala/click/seichi/config/: System.scala
src/main/scala/click/seichi/config/domain/: ConfigLoader.scala  DatabaseConnectionInformation.scala
src/main/scala/click/seichi/config/infrastructure/: PropertiesConfigLoader.scala
src/main/scala/click/seichi/configuration/: ConfigurationAPI.scala  System.scala
src/main/scala/click/seichi/configuration/domain/: ConfigLoader.scala  DatabaseConnectionInformation.scala
src/main/scala/click/seichi/configuration/infrastructure/: PropertiesConfigLoader.scala
src/main/scala/click/seichi/database/domain/: DatabaseConnectionInformation.scala
src/main/scala/click/seichi/subsystems/statistics/accumulation/domain/: PlayerStaticsAccumulatePersistence.scala
src/main/scala/click/seichi/subsystems/statistics/domain/: TimeStamp.scala
