[package]
name = "seichi-timed-stats-conifers"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }

anyhow = "1.0.60"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"
