[package]
name = "seichi-timed-stats-conifers"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }

anyhow = "1.0.65"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"
job_scheduler = "1.2.1"
tokio-cron-scheduler = "0.8.0"
