[package]
name = "seichi-timed-stats-conifers"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }

anyhow = "1.0.66"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
job_scheduler = "1.2.1"
tokio-cron-scheduler = "0.8.3"
