[package]
name = "seichi-timed-stats-conifers"
version = "0.1.0"
edition = "2021"

[dependencies]
infra-db-repository-impl = { path = "../infra/db_repository_impl" }
infra-upstream-repository-impl = { path = "../infra/upstream_repository_impl" }
domain = { path = "../domain" }

anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
