[package]
name = "seichi-timed-stats-conifers-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
infra-db-repository-impl = { path = "../infra/db_repository_impl" }
infra-upstream-repository-impl = { path = "../infra/upstream_repository_impl" }
domain = { path = "../domain" }

anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "registry", "env-filter"] }
sentry = { version = "0.31.3", features = ["profiling", "tracing"] }

tracing = "0.1.37"
serde = "1.0.164"
envy = "0.4.2"
once_cell = "1.18.0"
