[package]
name = "seichi-timed-stats-conifers-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
infra-db-repository-impl = { path = "../infra/db_repository_impl" }
infra-upstream-repository-impl = { path = "../infra/upstream_repository_impl" }
domain = { path = "../domain" }

anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3.17", features = ["std", "registry", "env-filter"] }
sentry = { version = "0.31.6", features = ["profiling", "tracing", "debug-logs"] }

tracing = "0.1.37"
serde = "1.0.188"
envy = "0.4.2"
once_cell = "1.18.0"
pprof = "0.11.1"
