[package]
name = "infra-db-repository-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.73"
async-trait = "0.1.73"
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["chrono"] }
domain = { path = "../../domain" }
diesel-async = { version = "0.3.2", features = ["mysql", "deadpool"] }
futures-util = "0.3.28"
ordered-float = "3.7.0"
tracing = "0.1.37"
serde = "1.0.179"
envy = "0.4.2"
thiserror = "1.0.46"
