[package]
name = "infra-upstream-repository-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../../domain" }
prost = "0.11.9"
tonic = { version = "0.11.0", features = ["gzip"] }
pbjson-types = "0.5.1"
envy = "0.4.2"
serde = "1.0.189"
anyhow = "1.0.75"
tracing = "0.1.39"
async-trait = "0.1.74"
chrono = "0.4.31"

